# Ashore_Wink_ESPS3

./: README.md
1.Hardware/LOOK_NT5510_小摆件_AD/Board1/: PCB1.pcbdoc
1.Hardware/LOOK_NT5510_小摆件_AD/Board1/Schematic1/: 1_P1.schdoc
2.Firmware/Cjson/CJson/: CJson.sln  CJson.vcxproj  CJson.vcxproj.filters
3.Software/: README.md
3.Software/Ashore_Wink_NT/: sdkconfig  sdkconfig.old
3.Software/Ashore_Wink_NT/main/: CMakeLists.txt  i80_controller_example_main.c
3.Software/Ashore_Wink_NT/main/Show_lvgl/: Show_lvgl.c  Show_lvgl.h
3.Software/nt35510/: .gitignore  CMakeLists.txt  partitions_singleapp_large.csv  sdkconfig  sdkconfig.old
3.Software/nt35510/components/button/: CMakeLists.txt
3.Software/nt35510/main/: CMakeLists.txt  aht20.c  aht20.h  esp_lcd_panel_nt35510_custom.c  http_req.c  http_req.h  label_app.c  label_app.h  lvgl_gui.c  lvgl_gui.h  main.c  rest_server.c  rest_server.h  start_app.c  start_app.h
3.Software/nt35510/main/fonts/: HarmonyOS_Sans_48.c
3.Software/nt35510/main/images/: hutao_0.c  hutao_1.c  hutao_2.c  hutao_3.c  hutao_4.c  hutao_5.c  hutao_6.c  hutao_7.c  hutao_8.c  hutao_9.c
3.Software/sample_project/: sdkconfig
3.Software/sample_project/main/: main.c
3.Software/sample_project/main/Peripheral/: peripheral.c  peripheral.h
4.Tools/Cjson/CJson/: CJson.cpp
4.Tools/Cjson/CJson/x64/Debug/: CJson.exe.recipe  (+1 more)
4.Tools/Release/Config/: Config.xml  ESP8266MAC.txt
5.Docs/4.0寸液晶模块/: 35510.txt
sample_project/: sdkconfig  sdkconfig.old
sample_project/main/: CMakeLists.txt  idf_component.yml  main.c
(+7 files in other folders)
